--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e657e848-1a80-4041-841d-374c996921a6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
